syntax = "proto3";

package hvxahv.v1alpha1.proto;
option go_package = "github.com/hvxahv/gateway/api/activity/v1alpha";

service Activity {
  rpc Inbox (InboxRequest) returns (InboxResponse) {}
  rpc GetInboxByActivityID (GetInboxByActivityIDRequest) returns (GetInboxByActivityIDResponse) {}
  rpc GetInboxesByAccountID (GetInboxesByAccountIDRequest) returns (GetInboxesByAccountIDResponse) {}
  rpc DeleteInboxByInboxesID (DeleteInboxByInboxesIDRequest) returns (DeleteInboxByInboxesIDResponse) {}

  rpc CreateOutbox (CreateOutboxRequest) returns (CreateOutboxResponse) {}
  rpc GetOutboxByActivityID (GetOutboxByActivityIDRequest) returns (GetOutboxByActivityIDResponse) {}
}

message Inboxes {
  string id = 1;
  string actor_id = 2;
  string activity_id = 3;
  string activity_type = 4;
  bytes activity_body = 5;
}

message InboxRequest {
  string name = 1;
  bytes data = 2;
}

message InboxResponse {
  string code = 1;
  string response = 2;
}

message GetInboxByActivityIDRequest {
  string activity_id = 1;
}

message GetInboxByActivityIDResponse {
  string code = 1;
  Inboxes inbox = 2;
}

message GetInboxesByAccountIDRequest {
  string account_id = 1;
}

message GetInboxesByAccountIDResponse {
  string code = 1;
  repeated Inboxes inboxes = 2;
}

message DeleteInboxByInboxesIDRequest {
  string activity_id = 1;
  string account_id = 2;
}

message DeleteInboxByInboxesIDResponse {
  string code = 1;
  string reply = 2;
}

message CreateOutboxRequest {}

message CreateOutboxResponse {}

message GetOutboxByActivityIDRequest {}

message GetOutboxByActivityIDResponse {}
